[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Entities/Parts/Melee/clawAtlas.png" type="Texture" id=1]
[ext_resource path="res://scenes/Entities/Parts/Melee/BasicClaw.gd" type="Script" id=2]
[ext_resource path="res://scenes/Entities/Projectiles/basicShock.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/Entities/Projectiles/DynamicShockArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/MechBuilder/Strut.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Claw/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -28.7465 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Claw/Sprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 39.8454 ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Claw/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( -2, 1, 2, 1, -2, 1 ),
"update": 0,
"values": [ -28.7465, -44.9999, -44.9999, 10.7948, 10.7948, -28.7465 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Claw/Sprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( -2, 1, 2, 1, -2, 1 ),
"update": 0,
"values": [ 39.8454, 59.9999, 59.9999, 1.2564, 1.2564, 39.8454 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hurt_targets"
} ]
}

[node name="BasicClaw" type="Node2D"]
script = ExtResource( 2 )
stretch_speed = 2000.0

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShootNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -3.0

[node name="Strut" parent="." instance=ExtResource( 5 )]
position = Vector2( 0.999997, 3 )
scale = Vector2( 1, 2 )

[node name="Claw" type="Node2D" parent="."]
position = Vector2( 0.999997, 3 )
scale = Vector2( 2.23985, 2.23985 )

[node name="HurtBox" parent="Claw" instance=ExtResource( 4 )]
position = Vector2( 92.6589, -2.67285 )
scale = Vector2( 0.445476, 0.445476 )

[node name="Sprite" type="Sprite" parent="Claw"]
position = Vector2( 1.32139, -1.62294 )
rotation = -0.501721
scale = Vector2( 1.47535, 1.47535 )
texture = ExtResource( 1 )
offset = Vector2( 47.8143, -13.9582 )
region_enabled = true
region_rect = Rect2( 0, 0, 124.03, 71.374 )

[node name="Sprite2" type="Sprite" parent="Claw"]
position = Vector2( 1.0244, -1.91993 )
rotation = 0.695433
scale = Vector2( 1.29218, 1.29218 )
texture = ExtResource( 1 )
offset = Vector2( 45.7355, 5.3457 )
region_enabled = true
region_rect = Rect2( 0, 75, 125, 49 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 2 )

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
